# llm-factory-toolkit

./: .flake8  .gitignore  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  INTEGRATION.md  PRD.md  README.md  ROADMAP.md  mypy.ini  pyproject.toml  requirements.in  requirements.txt
.claude/agents/: cto-agent.md  qa-agent.md  tech-lead-agent.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: 2026-02-04-assessment.txt  BENCHMARK.md  MCP.md  MCP_MIGRATION.md  MCP_ROADMAP.md  purposes.txt
docs/dynamic_tools_benchmark_results/: README.md  benchmark_report.md  benchmark_report_grok41.md  benchmark_report_haiku.md  full_keyword_2026-02-11.md  full_keyword_2026-02-11_v2.md  full_keyword_haiku_2026-02-11.md  full_semantic_2026-02-11.md  full_semantic_2026-02-11_v2.md  full_semantic_haiku_2026-02-11.md
docs/plans/: 2026-03-09-token-observability.md  2026-04-24-dynamic-tool-loading-improvements-impl-plan.md  2026-04-24-dynamic-tool-loading-improvements.md
docs/plans/2026-04-24-mcp-first-class/: MCP.md
examples/: custom_tool_example.py  mcp_first_class_usage.py
llm_factory_toolkit/: __init__.py  cache.py  client.py  exceptions.py  mcp.py  models.py  provider.py
llm_factory_toolkit/adapters/: __init__.py  claude_agent_sdk.py
llm_factory_toolkit/providers/: __init__.py  _base.py  _registry.py  _util.py  anthropic.py  base.py  capabilities.py  claude_code.py  gemini.py  googlegenai_adapter.py  openai.py  openai_adapter.py  xai.py
llm_factory_toolkit/providers/__tests__/: test_caching.py
llm_factory_toolkit/providers_legacy/: googlegenai_adapter.py  openai_adapter.py  xai_adapter.py
llm_factory_toolkit/tools/: __init__.py  _schema_gen.py  base_tool.py  builtins.py  catalog.py  loading_config.py  loading_strategy.py  meta_tools.py  models.py  runtime.py  selection.py  session.py  tool_factory.py
scripts/: benchmark_dynamic_tools.py  list_google_models.py
tests/: __init__.py  conftest.py  mcp_echo_server.py  test_adapter_claude_agent_sdk.py  test_anthropic_structured_output.py  test_anthropic_unit.py  test_async_safety.py  test_auto_compact.py  test_auto_schema.py  test_bounded_concurrency.py  test_browse_pagination.py  test_builtin_tools.py  test_cache.py  test_client_fallback.py  test_client_observability.py  test_client_unit.py  test_compact_mode.py  test_compact_provider_integration.py  test_coverage_imports.py  test_deadline.py  test_drop_params.py  test_dynamic_loading_unit.py  test_extract_core_tool_names.py  test_fallback_chain.py  test_find_tools.py  test_gemini_retry.py  test_gemini_unit.py  test_google_provider.py  test_google_web_search.py  test_large_catalog_audit.py  test_lazy_catalog.py  test_llmcall.py  test_llmcall_custom_tool_class.py  test_llmcall_deferred_payload.py  test_llmcall_dynamic_tools.py  test_llmcall_google.py  test_llmcall_multiple_tools.py  test_llmcall_pydantic_response.py  test_llmcall_pydantic_tools.py  test_llmcall_tool_intent.py  (+73 more)
tests/e2e/: conftest.py  test_anthropic.py  test_claude_code.py  test_gemini.py  test_openai.py  test_web_search.py  test_xai.py
