[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_factory_toolkit"
version = "0.7.1"
authors = [
  { name="Diego Carboni", email="carboni123@hotmail.com" },
]
description = "A toolkit for interacting with various Large Language Models"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Add dependencies from requirements.txt
dependencies = [
    "python-dotenv>=1.1",
    "openai>=2.7.1",
    "pydantic>=2.11",
]

[project.urls]
"Homepage" = "https://github.com/carboni123/llm_factory_toolkit"
"Bug Tracker" = "https://github.com/carboni123/llm_factory_toolkit/issues"

[project.optional-dependencies]
dev = [
   "pytest>=8.3.0",
   "pytest-asyncio>=1.2.0",
]
builtins = [
   "sympy>=1.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark a test as running with asyncio support",
]
