[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_factory_toolkit"
version = "2.0.0"
authors = [
  { name="Diego Carboni", email="carboni123@hotmail.com" },
]
description = "A toolkit for interacting with various Large Language Models"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "python-dotenv>=1.1,<2",
    "pydantic>=2.11,<3",
]

[project.urls]
"Homepage" = "https://github.com/carboni123/llm_factory_toolkit"
"Bug Tracker" = "https://github.com/carboni123/llm_factory_toolkit/issues"

[project.optional-dependencies]
openai = ["openai>=2.7.1,<3"]
anthropic = ["anthropic>=0.40,<1"]
gemini = ["google-genai>=1.0,<2"]
all = [
    "openai>=2.7.1,<3",
    "anthropic>=0.40,<1",
    "google-genai>=1.0,<2",
]
dev = [
   "pytest>=9.0.1,<10",
   "pytest-asyncio>=1.3.0,<2",
   "pytest-cov>=4.1,<6",
   "ruff>=0.9,<1",
   "mypy>=1.15,<2",
]
builtins = [
   "sympy>=1.12,<2",
]

[tool.setuptools.packages.find]
include = ["llm_factory_toolkit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark a test as running with asyncio support",
    "integration: marks tests that call external provider APIs",
]
