[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_factory_toolkit"
version = "2.1.0"
authors = [
  { name="Diego Carboni", email="carboni123@hotmail.com" },
]
description = "A toolkit for interacting with various Large Language Models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "python-dotenv>=1.1,<2",
    "pydantic>=2.11,<3",
]

[project.urls]
"Homepage" = "https://github.com/carboni123/llm-factory-toolkit"
"Bug Tracker" = "https://github.com/carboni123/llm-factory-toolkit/issues"

[project.optional-dependencies]
openai = ["openai>=2.7.1,<3"]
anthropic = ["anthropic>=0.40,<1"]
gemini = ["google-genai>=1.68,<2"]
claude-code = ["claude-agent-sdk>=0.1.48,<2"]
mcp = ["mcp>=1,<2"]
all = [
    "openai>=2.7.1,<3",
    "anthropic>=0.40,<1",
    "google-genai>=1.68,<2",
    "mcp>=1,<2",
]
dev = [
   "pytest>=9.0.1,<10",
   "pytest-asyncio>=1.3.0,<2",
   "pytest-cov>=4.1,<8",
   "ruff>=0.9,<1",
   "mypy>=1.15,<2",
]
builtins = [
   "sympy>=1.12,<2",
]

[tool.setuptools.packages.find]
include = ["llm_factory_toolkit*"]

[tool.setuptools.package-data]
llm_factory_toolkit = ["py.typed"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_errors = false

[[tool.mypy.overrides]]
module = "sympy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade (modernize syntax for 3.10+)
    "B",      # flake8-bugbear (common bugs)
    "A",      # flake8-builtins (shadowing builtins)
    "C4",     # flake8-comprehensions
    "ASYNC",  # flake8-async (async antipatterns)
    "S",      # flake8-bandit (security)
    "RUF",    # ruff-specific rules
]
ignore = [
    "A002",    # builtin-argument-shadowing — `input` param is API design choice
    "E501",    # line-too-long — handled by ruff format
    "N806",    # non-lowercase-variable-in-function — class references in locals are fine
    "S311",    # suspicious-non-cryptographic-random — used for retry jitter, not security
    "RUF002",  # ambiguous-unicode-character-docstring — intentional formatting chars
    "B027",    # empty-method-without-abstract-decorator — intentional default no-ops
    "RUF005",  # collection-literal-concatenation — style preference, not a bug
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"**/__tests__/**" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark a test as running with asyncio support",
    "integration: marks tests that call external provider APIs",
]
